syntax="proto3";

package domain;

service NewsService {
    rpc GetNews(GetNewsRequest) returns (GetNewsResponse);
}

message GetNewsResponse {
    string uid = 1;
    string title = 2;
    int64 timestamp = 3;
}

message GetNewsRequest {
    string id = 1;
}
